# LatticeDNAOrigami_old

./: .gitignore  CMakeLists.txt  Makefile  README  create_tikz_diagram.py  example_origami.json  lattice_origami_domains.py  prereqs.txt  setup.py  simple_loop.json  simulate_example_origami.py  test_lattice_origami_domains.py  visualize_simulation.sh
apps/: main.cpp
include/: met_movetypes.h  movetypes.h  nearest_neighbour.h  orientation_movetype.h  simulation.h  us_simulation.h  utility.h
include/latticeDNAOrigami/: annealing_simulation.hpp  bias_functions.hpp  cb_movetypes.hpp  constant_temp_simulation.hpp  domain.hpp  enumerate.hpp  files.hpp  hash.hpp  ideal_random_walk.hpp  met_movetypes.hpp  movetypes.hpp  nearest_neighbour.hpp  order_params.hpp  orientation_movetype.hpp  origami_potential.hpp  origami_system.hpp  parser.hpp  ptmc_simulation.hpp  random_gens.hpp  rg_movetypes.hpp  simulation.hpp  test_origami_system.hpp  top_constraint_points.hpp  transform_movetypes.hpp  us_simulation.hpp  utility.hpp
lattice_dna_origami/: lattice_origami_domains.py  nearest_neighbour.h  nearest_neighbour.py  origami_io.py  origami_system.cpp  origami_system.py  origami_system.pyx  remd.py  setup.py  simulation.py  utility.cpp  utility.h  utility.py
origamipy/: analyze_us.py  averaging.py  biases.py  calc_op_means_from_enum.py  calc_op_means_from_sims.py  calc_op_weights_from_enum.py  conditions.py  config_process.py  datatypes.py  decorrelate.py  files.py  io.py  mbar.py  mbar_wrapper.py  nearest_neighbour.py  op_process.py  origami_io.py  outputs.py  pgfplots.py  plot.py  pmfs.py  remc.py  us_process.py  utility.py
scripts/analysis/: calc_1d_enum_means.py  calc_2d-remc_domain_occupancies.py  calc_2d-remc_marginalized_expectations.py  calc_2d-remc_melting_temp_lfes.py  calc_2d-remc_numfullyboundstaples.py  calc_2d-remc_scaffold_distances.py  calc_2d_enum_means.py  calc_dist_effN.py  calc_domain_occupancies.py  calc_end-to-end-distance.py  calc_marginalized_expectations.py  calc_means_from_enum.py  calc_melting_temp_lfes.py  calc_mwus_domain_occupancies.py  calc_mwus_numfullyboundstaples.py  calc_mwus_scaffold_distances.py  calc_numfullyboundstaples.py  calc_op_2d_weights_from_sims.py  calc_op_effN.py  calc_op_means_from_enum.py  calc_op_means_from_sims.py  calc_op_weights_from_enum.py  calc_op_weights_from_sims.py  calc_radius-of-gyration.py  calc_scaffold_distances.py  calc_scaffold_rmsd.py  calc_stack_remc_domain-occupancies.py  calc_stack_remc_marginalized_expectations.py  calc_stack_remc_melting_temp.py  calc_stack_remc_numfullyboundstaples.py  calc_stack_remc_scaffold-distances.py  check_2d-remc_converged.py  check_remc_converged.py  check_remc_temps_converged.py  create_tikz_diagram.py  deconvolute_1d_remc.py  deconvolute_2d_remc.py  extract_configs.py  perform_1d_decorrelation.py  perform_1d_remc_mbar.py  (+13 more)
scripts/enumeration/: Makefile  enumerate.cpp  enumerate.h
scripts/mbar/: mbar.py
scripts/plotting/: plot_2d-remc_means.py  plot_all-lfes.py  plot_barrier-vs-sysvar.py  plot_barrier-vs-temp.py  plot_combo-lfes.py  plot_combo-means.py  plot_conditions-lfes.py  plot_domain-frequencies.py  plot_domain-melting-temps.py  plot_domainstate-melting-temps.py  plot_frequencies.py  plot_lfes-rep-temps.py  plot_lfes-three.py  plot_lfes-two.py  plot_lfes.py  plot_means.py  plot_melting-lfes.py  plot_melting-temps.py  plot_mwus_ops_series.py  plot_numfullyboundstaples-freq.py  plot_numfullyboundstaples-freqs.py  plot_ops_series.py  plot_remc_ops_series.py  plot_single-staple-curves.py  plot_staplestates-means.py  plot_staplestates-melting-temps.py
scripts/sequtils/: calc_average_energies.py  calc_average_melting_point.py  random_sequence.py
scripts/simulation_examples/: simulate_example_origami.py
src/: annealing_simulation.cpp  bias_functions.cpp  cb_movetypes.cpp  constant_temp_simulation.cpp  domain.cpp  enumerate.cpp  files.cpp  hash.cpp  ideal_random_walk.cpp  met_movetypes.cpp  movetypes.cpp  nearest_neighbour.cpp  order_params.cpp  orientation_movetype.cpp  origami_potential.cpp  origami_system.cpp  parser.cpp  ptmc_simulation.cpp  random_gens.cpp  rg_movetypes.cpp  simulation.cpp  top_constraint_points.cpp  transform_movetypes.cpp  us_simulation.cpp  utility.cpp
tests/: simulate_example_origami.py
(+7 files in other folders)
